[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm>=9",
    "setuptools>=80",
]

[project]
authors = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: OpenStudioLandscapes",
    "Programming Language :: Python",
]
dependencies = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes@v1.8.0",
    "PyYAML",
    "dagster==1.9.11",
    "docker-compose-graph @ git+https://github.com/michimussato/docker-compose-graph.git@v1.0.0",
    "gitpython",
    "importlib-metadata; python_version<\"3.8\"",
    "snakemd",
]
description = "VERT Feature for OpenStudioLandscapes"
dynamic = [
    "version",
]
license-files = [
    "LICENSE.txt",
]
maintainers = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
name = "OpenStudioLandscapes-VERT"
requires-python = ">=3.11"

[project.entry-points]

[project.optional-dependencies]
coverage = [
    "coverage",
    "pytest",
]
dev = [
    "OpenStudioLandscapes-VERT[coverage]",
    "OpenStudioLandscapes-VERT[lint]",
    "OpenStudioLandscapes-VERT[nox]",
    "OpenStudioLandscapes-VERT[readme]",
    "OpenStudioLandscapes-VERT[sbom]",
    "OpenStudioLandscapes-VERT[testing]",
    "dagster-webserver==1.9.11",
]
graphviz = [
    "graphviz",
    "pipdeptree",
]
lint = [
    "black",
    "isort",
    "pre-commit",
    "pylint",
]
nox = [
    "OpenStudioLandscapes-VERT[testing]",
    "nox",
]
pyproject = [
    "OpenStudioLandscapesUtil-VersionBumper @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-VersionBumper.git",
]
readme = [
    "OpenStudioLandscapesUtil-ReadmeGenerator @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-ReadmeGenerator.git@v1.8.0",
]
sbom = [
    "OpenStudioLandscapes-VERT[graphviz]",
    "cyclonedx-bom",
]
testing = [
    "pytest",
    "pytest-cov",
    "setuptools",
]

[project.readme]
content-type = "text/markdown; charset=UTF-8"
file = "README.md"

[project.urls]
Homepage = "https://github.com/michimussato/OpenStudioLandscapes-VERT"

[tool.dagster]
code_location_name = "OpenStudioLandscapes-VERT"
module_name = "OpenStudioLandscapes.VERT.definitions"

[tool.setuptools]
include-package-data = true
packages = [
    "OpenStudioLandscapes.VERT",
]
platforms = [
    "Linux",
]

[tool.setuptools.package-dir]
"" = "src"
